TP-636 - Remove all compilation warnings
* One Observable create method has been deprecated. It is however identical to the unsafeCreate method and has been replaced.
* clazz.newInstance has been deprecated and replaced with clazz.getDeclaredConstructor().newInstance() according to javadoc instructions.
* AstrixSettings class is deprecated but was missing the tag.
* Unchecked cast warnings were suppressed.
* jUnit assertThat has been deprecated. Replaced with method in hamcrest.
* Mockito.verifyZeroInteractions has been deprecated. Replaced with verifyNoInteractions.
* Deprecated constructor in Jackson Version was replaced.
* Destroy method is deprecated. Replaced with close method.
* SafeVarargs annotation added to AstrixRemotingTest to get rid of possible heap solution warning.